<resources>
    <string name="app_name">FinalProject</string>
    <string name="food_planning">Food Planning</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login_header_text">Login</string>
    <string name="login_button">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="want_sign_up">Sign Up</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="login_in_signup">Login</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="create_an_account">Create an account?</string>
    <string name="home_title">Home</string>
    <string name="category_title">Category</string>
    <string name="add_title">Add</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="search_title">Search</string>
    <string name="meal_plan_title">Meal Plan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category</string>
    <string name="fish_cat">Fish</string>
    <string name="checken_cat">Checken</string>
    <string name="salad_cat">Salad</string>
    <string name="pasta_cat">Pasta</string>
    <string name="pizza_cat">Pizza</string>
    <string name="meat_cat">Meat</string>
    <string name="categories">Categories</string>
    <string name="meat_meal">Meat</string>
    <string name="chicken_meal">Chicken</string>
    <string name="add_title_tab">Add</string>
    <string name="food_planning_title">Food Planning</string>
    <string name="hello_in_our_app">Hello in our App</string>
    <string name="btn_sign_up_start">Sign Up</string>
    <string name="btn_guest_start">Guest</string>
    <string name="btn_login_start">Login</string>
    <string name="random_meals_title">Random Meals</string>
    <string name="home_screen_title">Home</string>
    <string name="country_title">Country</string>
    <string name="random_meal_title">Random Meal</string>
    <string name="country">Country</string>
    <string name="addButton">Add</string>
    <string name="btn_remove">Remove</string>
    <string name="favorite_meals_title">Favorite Meals</string>
    <string name="favorite_title">Favorite</string>
    <string name="search_title_n">Search</string>
    <string name="remember_me">Remember me</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_of_meal_title">Steps Of Meal</string>
    <string name="add_to_plan_title">Add To Plan</string>
    <string name="my_plans_title">My Plans</string>
    <string name="categories_btn">Categories</string>
    <string name="countries_btn">Countries</string>
    <string name="ingredients_btn">Ingredients</string>
    <string name="food_planner_title">Food Planner</string>
    <string name="default_web_client_id">100044799841-tr9r07391kgfommn3nb60h3729bd0m2m.apps.googleusercontent.com</string>
    <string name="measures_title">Measures</string>
    <string name="structures_title">Structures</string>
</resources>