<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_id"
        android:title="@string/home_title"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/category_id"
        android:title="@string/category_title"
        android:icon="@drawable/baseline_category_24"/>
    <item
        android:id="@+id/fab_id"
        android:title="@string/add_title_tab"
        android:icon="@drawable/baseline_add_box_24"/>

    <item
        android:id="@+id/meal_plan_id"
        android:title="@string/meal_plan_title"
        android:icon="@drawable/baseline_calendar_today_24"/>

    <item
        android:id="@+id/search_id"
        android:title="@string/search_title"
        android:icon="@drawable/baseline_search_24"/>



</menu>