<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background ="@drawable/start4"
    tools:context=".BottomNavigationBar.Authentication.SignUpActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/simon3"
                android:fontFamily="@font/lobster"
                />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/enter_your_email"

                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_password"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up_button"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:textColor="@color/black"

                android:layout_marginTop="30dp"
                android:fontFamily="@font/lobster"
                android:backgroundTint="@color/simon2"
                app:cornerRadius= "20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/already_login_text"
                android:layout_gravity="center_horizontal"

                android:text="@string/already_have_an_account_text"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_redirect_text"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_in_signup"
                android:fontFamily="@font/lobster"
                android:padding="4dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/simon3"
                android:textSize="16sp"/>

        </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>