<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/simon">

    <ImageView
        android:id="@+id/iv_background_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/start4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-59dp" />

    <TextView
        android:id="@+id/tv_title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/food_planning_title"
        android:textAlignment="center"
        android:textColor="@color/simon3"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_background_start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/tv_desc_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hello_in_our_app"
        android:textColor="@color/white"
        android:fontFamily="@font/lobster"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_app"/>

    <Button
        android:id="@+id/btn_signup_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/simon2"
        android:padding="14dp"
        android:textSize="17sp"
        android:text="@string/btn_sign_up_start"
        android:textAllCaps="false"
        android:textColor="@color/black"

        android:fontFamily="@font/lobster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_start"
        app:layout_constraintVertical_bias="0.565"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_start"
        android:textSize="17sp"
        android:padding="14dp"
        android:textAllCaps="false"
        android:fontFamily="@font/lobster"
        android:textColor="@color/black"

        android:id="@+id/btn_login_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup_start"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.1"
        android:backgroundTint="@color/simon2"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_guest_start"
        android:padding="14dp"
        android:textSize="17sp"
        android:fontFamily="@font/lobster"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:id="@+id/btn_guest_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_start"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.2"
        android:backgroundTint="@color/simon2"/>







</androidx.constraintlayout.widget.ConstraintLayout>