<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/start4"
    tools:context=".BottomNavigationBar.CategoryFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/category_text"
        android:fontFamily="@font/lobster"
        android:textColor="@color/white"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_below="@id/category_text">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/fish_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fish_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/white"

            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/meat_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meat_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/pasta_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pasta_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/pizza_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"

            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/salaad_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"
                    />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            app:cardElevation="8dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/chicken_removebg_preview"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checken_cat"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lobster"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>


        </androidx.cardview.widget.CardView>





    </GridLayout>

</RelativeLayout>