<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start4"
    tools:context=".BottomNavigationBar.Search.view.SearchFragment">

    <LinearLayout
        android:id="@+id/ll_first_part_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1.4"
            android:background="@color/simon4"
            android:textSize="18sp"
            android:hint="Search"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons_part_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_first_part_search">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/simon3"
            android:id="@+id/btn_categories_list_search"
            android:text="@string/categories_btn"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/simon3"
            android:id="@+id/btn_countries_list_search"
            android:text="@string/countries_btn"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/simon3"
            android:id="@+id/btn_ingredients_list_search"
            android:text="@string/ingredients_btn"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_buttons_part_search" />


</androidx.constraintlayout.widget.ConstraintLayout>